--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         "tekst": "Nu går alt så meget bedre" };
     meldingar.push(nyMelding);
 </script>
+<h1>Superchat</h1>
+<article id="txtMeldingar"></article>
+<-- Lim inn koden frå Firebase her -->
+<script>
+    let txtMeldingar = document.getElementById("txtMeldingar");
+    let database = firebase.database();
+    let meldingar = database.ref("meldingar"); let nyMelding = {
+        "sendar": "Guri Gås",
+        "tekst": "Nei, Kari, det gjer det langt ifrå" };
+    meldingar.push(nyMelding);
+    function visMelding(snapshot) {
+        var melding = snapshot.val();
+        txtMeldingar.innerHTML += `<p>${melding.sendar} seier ${melding.tekst}</p>`;
+    }
+    meldingar.on("child_added", visMelding);
+</script>
 
     </body>
 </html>
