--- a/skjema.html
+++ b/skjema.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="no">
+    <head>
+        <meta charset="UTF-8">
+        <title>Github Pages</title>
+        <link rel="stylesheet" type="text/css" href="stil.css">
+    </head>
+
 <body>
     <form id="skjema">
         <input type="text" id="inpSendar" required placeholder="Kven er du?">
@@ -42,3 +50,4 @@
         meldingar.on("child_added", visMelding);
         skjema.onsubmit = regNyMelding; </script>
 </body>
+</html>
